The width property was removed from the body element. The navbar will no longer have a justify-content space-between, it will have instead a gap with 50%. The padding for the left-right will be 0, as it already has available space to the sides. The navbar-logo width also changed. The navbar-list font size decreased to 1.1rem.

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
 }
 
 header {
@@ -88,23 +87,24 @@ header:hover {
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: sticky;
+    gap: 50%;
     width: 100%;
-    padding: 2vh 1vw;
+    padding: 2vh 0;
     background-color: rgb(0, 0, 0, 0.5);
     transition: .5s background-color ease-in-out;
 }
 
 .navbar-logo {
-    width: 18vw;
+    width: 15vw;
 }
 
 .navbar-list {
     display: flex;
     gap: 1vw;
-    font: normal 500 1.5rem var(--system-ui);
+    font: normal 500 1.1rem var(--system-ui);
     color: white;
 }
 
@@ -160,7 +160,7 @@ header:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     background-color: rgba(0, 0, 0);
 }
 
